---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: named_tuple.md - `NamedTuple` - `typing.NamedTuple` - Multiple Inheritance
mdtest path: crates/ty_python_semantic/resources/mdtest/named_tuple.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import NamedTuple, Protocol
 2 | 
 3 | # error: [invalid-named-tuple] "NamedTuple class `C` cannot use multiple inheritance except with `Generic[]`"
 4 | class C(NamedTuple, object):
 5 |     id: int
 6 | 
 7 | # fmt: off
 8 | 
 9 | class D(
10 |     int,  # error: [invalid-named-tuple]
11 |     NamedTuple
12 | ): ...
13 | 
14 | # fmt: on
15 | 
16 | # error: [invalid-named-tuple]
17 | class E(NamedTuple, Protocol): ...
18 | from abc import ABC
19 | from collections import namedtuple
20 | from typing import NamedTuple
21 | 
22 | class Point(namedtuple("Point", ["x", "y"]), ABC):
23 |     """No error - functional namedtuple inheritance allows multiple inheritance."""
24 | 
25 | class Url(NamedTuple("Url", [("host", str), ("port", int)]), ABC):
26 |     """No error - typing.NamedTuple functional syntax also allows multiple inheritance."""
27 | 
28 | p = Point(1, 2)
29 | reveal_type(p.x)  # revealed: Any
30 | reveal_type(p.y)  # revealed: Any
31 | 
32 | u = Url("localhost", 8080)
33 | reveal_type(u.host)  # revealed: str
34 | reveal_type(u.port)  # revealed: int
```

# Diagnostics

```
error[invalid-named-tuple]: NamedTuple class `C` cannot use multiple inheritance except with `Generic[]`
 --> src/mdtest_snippet.py:4:21
  |
4 | class C(NamedTuple, object):
  |                     ^^^^^^
  |

```

```
error[invalid-named-tuple]: NamedTuple class `D` cannot use multiple inheritance except with `Generic[]`
  --> src/mdtest_snippet.py:10:5
   |
10 |     int,  # error: [invalid-named-tuple]
   |     ^^^
   |

```

```
error[invalid-named-tuple]: NamedTuple class `E` cannot use multiple inheritance except with `Generic[]`
  --> src/mdtest_snippet.py:17:21
   |
17 | class E(NamedTuple, Protocol): ...
   |                     ^^^^^^^^
   |

```
